# audiofx

./: .gitignore  Bitcrusher.cpp  Bitcrusher.h  CMakeLists.txt  Distortion.cpp  Distortion.h  Effect.cpp  Effect.h  Overdrive.cpp  Overdrive.h  README.md  Tremolo.cpp  Tremolo.h  Volume.cpp  Volume.h  WavFile.cpp  WavFile.h  main.cpp
